Switching the Asmtools version from 7.0 to 8.0 (#62)
* Update LICENSE file

* The experimental version is aimed to refactor the tool

* verificationType mistakenly added to source code is renamed to type

* Adapted mvn bindings to at8

* Added tests to represent bad stream handling in jdec and correctone in jdis

* Made jdec to write output to proper toolOutput instead of bad logOutput

* 7903208: [Jasm] Add support for generics (the Signature attribute)

* 7902888: Excess entries in BootstrapMethods with the same bsm, bsmKind, bsmArgs

* Replaced hardcoded String[] args, by varargs String... where reasonable

Once the "tool" mandatory array memebr was removed from each tool's main
method, and considering calls from libraries, and form tests where the
argument is very often just one file, or more readable "a1", a2"...
without new String[]{} declaration, changed those String[] enforcing
headers to more benevolent String...

* Intentionally removed ACC_SUPER class modifier was causing hotswap to fail

When jasm's  disasm, modify, asm cycle output binary was used for class
hotswap, remote JDK was not accepting it with java.lang.UnsupportedOperationException:
class redefinition failed: attempted to change the class modifiers
beacuse of ommited supoer keyword (although it have already no real
reason)

This patch is returning the kwyword without conditions, when it was
included in original bytecode

* extended test to verify that super is not used always

if super is not in source code, then it is not in disambled code

* 7903248: jasm: FieldData.ConstantValue holds undefined reference to CP while writing fields to a class

* Added support for stdin in jdis

* stdin is now read also by jasm,jcod,jdec

more tests needed

* Removed jdis specific missleading provide method

* Tool output moved where it belongs to commons

* Removed duplicated declaration of ArrayList<ToolInput> fileList

* Changed requireNonNull message in