@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1996, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1996, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,71 +23,92 @@
 package org.openjdk.asmtools.jdis;
 
 import org.openjdk.asmtools.asmutils.HexUtils;
-import org.openjdk.asmtools.common.Tool;
-import org.openjdk.asmtools.jasm.JasmTokens;
-import org.openjdk.asmtools.jasm.Modifiers;
+import org.openjdk.asmtools.asmutils.Pair;
+import org.openjdk.asmtools.common.FormatError;
+import org.openjdk.asmtools.common.structure.CFVersion;
+import org.openjdk.asmtools.common.structure.EAttribute;
+import org.openjdk.asmtools.common.structure.EModifier;
 
 import java.io.*;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 import static java.lang.String.format;
-import static org.openjdk.asmtools.jasm.RuntimeConstants.*;
-import static org.openjdk.asmtools.jasm.Tables.*;
-import static org.openjdk.asmtools.jdis.TraceUtils.traceln;
+import static org.openjdk.asmtools.common.structure.ClassFileContext.CLASS;
+import static org.openjdk.asmtools.common.structure.ClassFileContext.MODULE;
+import static org.openjdk.asmtools.common.structure.EModifier.ACC_ABSTRACT;
+import static org.openjdk.asmtools.jasm.ClassFileConst.JAVA_MAGIC;
 
 /**
  * Central class data for of the Java Disassembler
  */
-public class ClassData extends MemberData {
+public class ClassData extends MemberData<ClassData> {
 
-    // Owner of this ClassData
-    protected Tool tool;
-
-    // -----------------------------
+    // -----------------------------------------------------------------------------------------------
     // Header Info
-    // -----------------------------
+    // -----------------------------------------------------------------------------------------------
     // Version info
-    protected int minor_version, major_version;
+    protected CFVersion cfVersion = new CFVersion();
 
     // Constant Pool index to this class
     protected int this_cpx;
 
+    // Pre-initialized Constant Pool names calculated by this_cpx
+    protected String className = "";
+    protected String packageName = "";
+    protected String classShortName = "";
+
     // Constant Pool index to this classes parent (super)
     protected int super_cpx;
 
-    // Constant Pool index to a file reference to the Java source
-    protected int source_cpx = 0;
-
-    // -----------------------------
-    // The Constant Pool
-    // -----------------------------
-    protected ConstantPool pool;
-
-    // -----------------------------
-    // Interfaces,Fields,Methods and Attributes
-    // -----------------------------
+    // -----------------------------------------------------------------------------------------------
+    // Interfaces, Fields, Methods && Attributes
+    // -----------------------------------------------------------------------------------------------
     // The interfaces this class implements
     protected int[] interfaces;
 
     // The fields of this class
-    protected ArrayList<FieldData> fields;
+    protected Container<FieldData> fields;
 
     // The methods of this class
-    protected ArrayList<MethodData> methods;
+    protected Container<MethodData> methods;
 
-    // The record attribute of this class (since class file 58.65535)
-    protected RecordData record;
+    /**
+     * Attributes:
+     * SourceFile                                   45.3
+     * InnerClasses                                 45.3
+     * EnclosingMethod                              49.0
+     * SourceDebugExtension                         49.0
+     * BootstrapMethods                             51.0
+     * Module,   ModulePackages, ModuleMainClass    53.0
+     * NestHost, NestMembers                        55.0
+     * Record                                       60.0
+     * PermittedSubclasses                          61.0
+     * -------------------------------------------------
+     * Synthetic                                    45.3
+     * Deprecated                                   45.3
+     * Signature                                    49.0
+     * RuntimeVisibleAnnotations                    49.0
+     * RuntimeInvisibleAnnotations                  49.0
+     * RuntimeVisibleTypeAnnotations                52.0
+     * RuntimeInvisibleTypeAnnotations              52.0
+     */
+
+    // The SourceFile Attribute
+    protected SourceFileData sourceFileData;
 
     // The inner-classes of this class
-    protected ArrayList<InnerClassData> innerClasses;
+    protected Container<InnerClassData> innerClasses;
 
-    // The bootstrapmethods this class implements
-    protected ArrayList<BootstrapMethodData> bootstrapMethods;
+    // The record attribute of this class (since class file 58.65535)
+    protected RecordData recordData;
+
+
+    // The bootstrap methods this class implements
+    protected Container<BootstrapMethodData> bootstrapMethods;
 
     //The module this class file presents
     protected ModuleData moduleData;
@@ -101,46 +122,46 @@ public class ClassData extends MemberData {
     // The PermittedSubclasses of this class (JEP 360 (Sealed types): class file 59.65535)
     protected PermittedSubclassesData permittedSubclassesData;
 
-    // other parsing fields
-    protected PrintWriter out;
-    protected String pkgPrefix = "";
+    protected SourceDebugExtensionData sourceDebugExtensionData;
+
+    // Valhalla
+    protected PreloadData preloadData;
+
     // source file data
     private TextLines sourceLines = null;
     private Path classFile = null;
 
-    public ClassData(PrintWriter out, Tool tool) {
-        this.out  = out;
-        this.tool = tool;
+    public ClassData(JdisEnvironment environment) {
+        super(environment);
         memberType = "ClassData";
-        TraceUtils.traceln("printOptions=" + options.toString());
-        pool = new ConstantPool(this);
-        init(this);
+        super.environment = environment;
+        environment.traceln("printOptions=" + Options.asShortString());
+        super.pool = new ConstantPool(this);
+        super.init(this);
     }
 
-    public void read(File in) throws IOException {
-        try ( DataInputStream dis = new DataInputStream(new FileInputStream(in))){
-            read(dis);
+    public void read(File inputFile) throws IOException {
+        try (DataInputStream dis = new DataInputStream(new FileInputStream(inputFile))) {
+            read(dis, inputFile.toPath());
         }
-        classFile = in.toPath();
     }
 
-    public void read(String in) throws IOException {
-        try ( DataInputStream dis = new DataInputStream(new FileInputStream(in))){
-            read(dis);
+    public void read(String inputFileName) throws IOException {
+        try (DataInputStream dis = new DataInputStream(new FileInputStream(inputFileName))) {
+            read(dis, Paths.get(inputFileName));
         }
-        classFile = Paths.get(in);
     }
 
     /**
      * Read and resolve the field data
      */
     protected void readFields(DataInputStream in) throws IOException {
-        int nfields = in.readUnsignedShort();
-        TraceUtils.traceln("nfields=" + nfields);
-        fields = new ArrayList<>(nfields);
-        for (int k = 0; k < nfields; k++) {
+        int nFields = in.readUnsignedShort();
+        environment.traceln("fields=#" + nFields);
+        fields = new Container<>(nFields);
+        for (int k = 0; k < nFields; k++) {
             FieldData field = new FieldData(this);
-            TraceUtils.traceln("  FieldData: #" + k);
+            environment.traceln("  FieldData: #" + k);
             field.read(in);
             fields.add(field);
         }
@@ -150,12 +171,12 @@ public class ClassData extends MemberData {
      * Read and resolve the method data
      */
     protected void readMethods(DataInputStream in) throws IOException {
-        int nmethods = in.readUnsignedShort();
-        TraceUtils.traceln("nmethods=" + nmethods);
-        methods = new ArrayList<>(nmethods);
-        for (int k = 0; k < nmethods; k++) {
+        int nMethods = in.readUnsignedShort();
+        environment.traceln("methods=#" + nMethods);
+        methods = new Container<>(nMethods);
+        for (int k = 0; k < nMethods; k++) {
             MethodData method = new MethodData(this);
-            TraceUtils.traceln("  MethodData: #" + k);
+            environment.traceln("MethodData: #" + k);
             method.read(in);
             methods.add(method);
         }
@@ -166,13 +187,13 @@ public class ClassData extends MemberData {
      */
     protected void readInterfaces(DataInputStream in) throws IOException {
         // Read the interface names
-        int numinterfaces = in.readUnsignedShort();
-        TraceUtils.traceln("numinterfaces=" + numinterfaces);
-        interfaces = new int[numinterfaces];
-        for (int i = 0; i < numinterfaces; i++) {
-            int intrf_cpx = in.readShort();
-            TraceUtils.traceln("  intrf_cpx[" + i + "]=" + intrf_cpx);
-            interfaces[i] = intrf_cpx;
+        int nInterfaces = in.readUnsignedShort();
+        environment.traceln("interfaces=#" + nInterfaces);
+        interfaces = new int[nInterfaces];
+        for (int i = 0; i < nInterfaces; i++) {
+            int interfaceCpx = in.readShort();
+            environment.traceln("  InterfaceCpx[" + i + "]=" + interfaceCpx);
+            interfaces[i] = interfaceCpx;
         }
     }
 
@@ -180,70 +201,73 @@ public class ClassData extends MemberData {
      * Read and resolve the attribute data
      */
     @Override
-    protected boolean handleAttributes(DataInputStream in, AttrTag attrtag, int attrlen) throws IOException {
+    protected boolean handleAttributes(DataInputStream in, EAttribute attributeTag, int attributeLength) throws IOException {
         // Read the Attributes
         boolean handled = true;
-        switch (attrtag) {
-            case ATT_Signature:
-                if( signature != null ) {
-                    traceln("Class attribute:  more than one attribute Signature are in ClassFile.attribute_info_attributes[attribute_count]");
-                    traceln("Last one will be used.");
+        switch (attributeTag) {
+            case ATT_Signature -> {
+                if (signature != null) {
+                    environment.warning("warn.one.attribute.required", "Signature", "ClassFile");
                 }
-                signature = new SignatureData(cls).read(in, attrlen);
-                break;
-            case ATT_SourceFile:
+                signature = new SignatureData(this).read(in, attributeLength);
+            }
+            case ATT_SourceFile -> {
                 // Read SourceFile Attr
-                if (attrlen != 2) {
-                    throw new ClassFormatError("ATT_SourceFile: Invalid attribute length");
+                if (attributeLength != 2) {
+                    throw new FormatError(environment.getLogger(),
+                            "err.invalid.attribute.length", "SourceFile_attribute", attributeLength);
                 }
-                source_cpx = in.readUnsignedShort();
-                break;
-            case ATT_InnerClasses:
+                if (sourceFileData != null) {
+                    environment.warning("warn.one.attribute.required", "SourceFile", "ClassFile");
+                }
+                sourceFileData = new SourceFileData(this).read(in, attributeLength);
+            }
+            case ATT_SourceDebugExtension -> {
+                sourceDebugExtensionData = new SourceDebugExtensionData(this).read(in, attributeLength);
+            }
+            case ATT_InnerClasses -> {
                 // Read InnerClasses Attr
-                int num1 = in.readUnsignedShort();
-                if (2 + num1 * 8 != attrlen) {
-                    throw new ClassFormatError("ATT_InnerClasses: Invalid attribute length");
+                int count = in.readUnsignedShort();
+                if (2 + count * 8 != attributeLength) {
+                    throw new FormatError(environment.getLogger(),
+                            "err.invalid.attribute.length", "InnerClasses_attribute", attributeLength);
                 }
-                innerClasses = new ArrayList<>(num1);
-                for (int j = 0; j < num1; j++) {
+                innerClasses = new Container<>(count);
+                for (int j = 0; j < count; j++) {
                     InnerClassData innerClass = new InnerClassData(this);
                     innerClass.read(in);
                     innerClasses.add(innerClass);
                 }
-                break;
-            case ATT_BootstrapMethods:
+            }
+            case ATT_BootstrapMethods -> {
                 // Read BootstrapMethods Attr
-                int num2 = in.readUnsignedShort();
-                bootstrapMethods = new ArrayList<>(num2);
-                for (int j = 0; j < num2; j++) {
+                int count = in.readUnsignedShort();
+                bootstrapMethods = new Container<BootstrapMethodData>(count).setPrintable(printCPIndex);
+                for (int j = 0; j < count; j++) {
                     BootstrapMethodData bsmData = new BootstrapMethodData(this);
                     bsmData.read(in);
                     bootstrapMethods.add(bsmData);
                 }
-                break;
-            case ATT_Module:
+            }
+            case ATT_Module -> {
                 // Read Module Attribute
                 moduleData = new ModuleData(this);
                 moduleData.read(in);
-                break;
-            case ATT_NestHost:
+            }
+            case ATT_NestHost ->
                 // Read NestHost Attribute (since class file: 55.0)
-                nestHost = new NestHostData(this).read(in, attrlen);
-                break;
-            case ATT_NestMembers:
+                    nestHost = new NestHostData(this).read(in, attributeLength);
+            case ATT_NestMembers ->
                 // Read NestMembers Attribute (since class file: 55.0)
-                nestMembers = new NestMembersData(this).read(in, attrlen);
-                break;
-            case ATT_Record:
-                record = new RecordData(this).read(in);
-                break;
-            case ATT_PermittedSubclasses:
+                    nestMembers = new NestMembersData(this).read(in, attributeLength);
+            case ATT_Record -> recordData = new RecordData(this).read(in);
+            case ATT_PermittedSubclasses ->
                 // Read PermittedSubclasses Attribute (JEP 360 (Sealed types): class file 59.65535)
-                permittedSubclassesData = new PermittedSubclassesData(this).read(in, attrlen);
-                break;
-            default:
-                handled = false;
-                break;
+                    permittedSubclassesData = new PermittedSubclassesData(this).read(in, attributeLength);
+            case ATT_Preload ->
+                // Valhalla
+                    preloadData = new PreloadData(this).read(in, attributeLength);
+            default -> handled = false;
         }
         return handled;
     }
@@ -251,293 +275,385 @@ public class ClassData extends MemberData {
     /**
      * Read and resolve the class data
      */
-    private void read(DataInputStream in) throws IOException {
+    public void read(final DataInputStream in, final Path src) throws IOException {
+        classFile = src;
         // Read the header
-        int magic = in.readInt();
-        if (magic != JAVA_MAGIC) {
-            throw new ClassFormatError("wrong magic: " + HexUtils.toHex(magic) + ", expected " + HexUtils.toHex(JAVA_MAGIC));
+        try {
+            int magic = in.readInt();
+
+            if (magic != JAVA_MAGIC) {
+                throw new ClassCastException("wrong magic: " + HexUtils.toHex(magic) + ", expected " + HexUtils.toHex(JAVA_MAGIC));
+            }
+
+            cfVersion.setMinorVersion((short) in.readUnsignedShort());
+            cfVersion.setMajorVersion((short) in.readUnsignedShort());
+
+            // Read the constant pool
+            pool.read(in);
+            access = in.readUnsignedShort(); // & MM_CLASS; // Q
+            this_cpx = in.readUnsignedShort();
+            super_cpx = in.readUnsignedShort();
+
+            environment.traceln("0x%04X [ %s] this_cpx=%d super_cpx=%d", access,
+                    EModifier.asNames(access, EModifier.isModule(access) ? CLASS : MODULE),
+                    this_cpx, super_cpx);
+
+            // Read the interfaces
+            readInterfaces(in);
+
+            // Read the fields
+            readFields(in);
+
+            // Read the methods
+            readMethods(in);
+
+            // Read the attributes
+            readAttributes(in);
+
+            //Pre-initialize names,indexes needed for printing.
+            initClassNames(this_cpx);
+            //
+            environment.traceln("\n<< Reading is done >>");
+        } catch (EOFException eofException) {
+            throw new FormatError(environment.getLogger(), "err.eof");
         }
-        minor_version = in.readUnsignedShort();
-        major_version = in.readUnsignedShort();
+    }
 
-        // Read the constant pool
-        pool.read(in);
-        access = in.readUnsignedShort(); // & MM_CLASS; // Q
-        this_cpx = in.readUnsignedShort();
-        super_cpx = in.readUnsignedShort();
-        TraceUtils.traceln("access=" + access + " " + Modifiers.accessString(access, CF_Context.CTX_INNERCLASS) +
-                " this_cpx=" + this_cpx +
-                " super_cpx=" + super_cpx);
+    /**
+     * Initializes class, package names needed for printing asm file
+     *
+     * @param this_cpx The constant_pool entry at that index is a CONSTANT_Class_info structure (§4.4.1)
+     *                 representing the class or interface defined by this class file or
+     *                 this_class is module-info in the case of a module.
+     */
+    private void initClassNames(int this_cpx) {
+        this.className = pool.getClassName(this_cpx);
+        final int idx = className.lastIndexOf('/');
+        if (idx != -1) {
+            this.packageName = className.substring(0, idx);
+            this.classShortName = className.substring(idx + 1);
+        } else {
+            this.classShortName = className;
+        }
+        if (sourceFileData != null) {
+            sourceFileData.setSourceName();
+        }
+    }
 
-        // Read the interfaces
-        readInterfaces(in);
-
-        // Read the fields
-        readFields(in);
-
-        // Read the methods
-        readMethods(in);
-
-        // Read the attributes
-        readAttributes(in);
-        //
-        TraceUtils.traceln("", "<< Reading is done >>", "");
+    /**
+     * Determines if this Class has a package
+     *
+     * @return true if the package exists for this class
+     */
+    public boolean hasPackage() {
+        return this.packageName.length() != 0;
     }
 
     /**
      * Read and resolve the attribute data
      */
-    public String getSrcLine(int lnum) {
+    public String getSrcLine(int lineNum) {
         if (sourceLines == null) {
             return null;  // impossible call
         }
         String line;
         try {
-            line = sourceLines.getLine(lnum);
+            line = sourceLines.getLine(lineNum);
         } catch (ArrayIndexOutOfBoundsException e) {
-            line = "Line number " + lnum + " is out of bounds";
+            line = format("Line number %d is out of bounds", lineNum);
         }
         return line;
     }
 
-    private <T extends AnnotationData> void printAnnotations(List<T> annotations) {
-        if (annotations != null) {
-            for (T ad : annotations) {
-                ad.print(out, "");
-                out.println();
+    @SafeVarargs
+    private <T extends AnnotationData> void printAnnotations(List<T>... annotationLists) throws IOException {
+        if (annotationLists != null) {
+            for (List<T> list : annotationLists) {
+                if (list != null) {
+                    for (T annotation : list) {
+                        annotation.initIndent(0);
+                        annotation.print();
+                        println();
+                    }
+                }
             }
         }
     }
 
+    /**
+     * Print asm file.
+     */
     @Override
     public void print() throws IOException {
-        int k, l;
-        String className = "";
-        String sourceName = null;
-        if( isModuleUnit() ) {
+        // Number of read corrupted attributes if any
+        int numCorruptedAttributes = 0;
+        if (className.endsWith("module-info") || EModifier.isModule(access)) {          // module-info compilation unit
             // Print the Annotations
-            printAnnotations(visibleAnnotations);
-            printAnnotations(invisibleAnnotations);
-        } else {
-            className = pool.getClassName(this_cpx);
-            int pkgPrefixLen = className.lastIndexOf("/") + 1;
-            // Write the header
-            // package-info compilation unit
-            if (className.endsWith("package-info")) {
-                // Print the Annotations
-                printAnnotations(visibleAnnotations);
-                printAnnotations(invisibleAnnotations);
-                printAnnotations(visibleTypeAnnotations);
-                printAnnotations(invisibleTypeAnnotations);
-                if (pkgPrefixLen != 0) {
-                    pkgPrefix = className.substring(0, pkgPrefixLen);
-                    out.print("package  " + pkgPrefix.substring(0, pkgPrefixLen - 1) + " ");
-                    out.print("version " + major_version + ":" + minor_version + ";");
-                }
-                out.println();
-                return;
+            printAnnotations(visibleAnnotations, invisibleAnnotations);
+            // Print Module Header
+            if (moduleData == null) {
+                // exception: 4.7.25. The Module Attribute is empty.
+                moduleData = new ModuleData(this);
             }
-            if (pkgPrefixLen != 0) {
-                pkgPrefix = className.substring(0, pkgPrefixLen);
-                out.println("package  " + pkgPrefix.substring(0, pkgPrefixLen - 1) + ";");
-                className = pool.getShortClassName(this_cpx, pkgPrefix);
+            print(moduleData.getModuleHeader(format("version %s", cfVersion.asString())));
+            println();
+            println("{");
+            // Print the constant pool
+            if (printConstantPool) {
+                pool.print();
             }
-            out.println();
-            // Print the Annotations
-            printAnnotations(visibleAnnotations);
-            printAnnotations(invisibleAnnotations);
-            printAnnotations(visibleTypeAnnotations);
-            printAnnotations(invisibleTypeAnnotations);
-            if ((access & ACC_SUPER) != 0) {
-                out.print("super ");
-                access = access & ~ACC_SUPER;
-            }
-        }
-// see if we are going to print: abstract interface class
-// then replace it with just: interface
-printHeader:
-        {
-printSugar:
-            {
-                if ((access & ACC_ABSTRACT) == 0) {
-                    break printSugar;
-                }
-                if ((access & ACC_INTERFACE) == 0) {
-                    break printSugar;
-                }
-                if (options.contains(Options.PR.CPX)) {
-                    break printSugar;
-                }
-                if (this_cpx == 0) {
-                    break printSugar;
-                }
-
-                // make sure the this_class is a valid class ref
-                ConstantPool.Constant this_const = pool.getConst(this_cpx);
-                if (this_const == null || this_const.tag != ConstantPool.TAG.CONSTANT_CLASS) {
-                    break printSugar;
-                }
-
-                // all conditions met, print syntactic sugar:
-                out.print(Modifiers.accessString(access & ~ACC_ABSTRACT, CF_Context.CTX_CLASS));
-                if (isSynthetic) {
-                    out.print("synthetic ");
-                }
-                if (isDeprecated) {
-                    out.print("deprecated ");
-                }
-                out.print(" " + pool.getShortClassName(this_cpx, pkgPrefix));
-                break printHeader;
-            }
-
-            if(isModuleUnit()) {
-                out.print(moduleData.getModuleHeader());
-            } else {
-                // not all conditions met, print header in ordinary way:
-                out.print(Modifiers.accessString(access, CF_Context.CTX_CLASS));
-                if (isSynthetic) {
-                    out.print("synthetic ");
-                }
-                if (isDeprecated) {
-                    out.print("deprecated ");
-                }
-                if (options.contains(Options.PR.CPX)) {
-                    out.print("\t#" + this_cpx + " //");
-                }
-                pool.PrintConstant(out, this_cpx);
-            }
-        }
-        out.println();
-        if(!isModuleUnit()) {
-            if (!pool.getClassName(super_cpx).equals("java/lang/Object")) {
-                out.print("\textends ");
-                pool.printlnClassId(out, super_cpx);
-                out.println();
-            }
-        }
-        l = interfaces.length;
-
-        if (l > 0) {
-            for (k = 0; k < l; k++) {
-                if (k == 0) {
-                    out.print("\timplements ");
-                } else {
-                    out.print("\t\t ");
-                }
-                boolean printComma = (l > 1 && k < (l - 1));
-                pool.printlnClassId(out, interfaces[k], printComma);
-                out.println();
-            }
-        }
-        out.println("\tversion " + major_version + ":" + minor_version);
-        out.println("{");
-
-        if ((options.contains(Options.PR.SRC)) && (source_cpx != 0)) {
-            sourceName = pool.getString(source_cpx);
-            if (sourceName != null) {
-                sourceLines = new TextLines(classFile.getParent(), sourceName);
-            }
-        }
-
-        // Print the constant pool
-        if (options.contains(Options.PR.CP)) {
-            pool.print(out);
-        }
-        // Don't print fields, methods, inner classes and bootstrap methods if it is module-info entity
-        if ( !isModuleUnit() ) {
-
-            if (signature != null) {
-                signature.print(getIndentString() + JasmTokens.Token.SIGNATURE.parseKey() + " ", pr_cpx ? ";\t // " : ";");
-                out.println();
-                out.println();
-            }
-
-            // Print the fields
-            printMemberDataList(fields);
-
-            // Print the methods
-            printMemberDataList(methods);
-
-            // Print the Record (since class file 58.65535 JEP 359)
-            if( record != null ) {
-                record.print();
-            }
-
-            // Print PermittedSubclasses Attribute (JEP 360 (Sealed types): class file 59.65535)
-            if( permittedSubclassesData != null) {
-                permittedSubclassesData.print();
-            }
-            // Print the NestHost (since class file: 55.0)
-            if(nestHost != null) {
-                nestHost.print();
-            }
-            // Print the NestMembers (since class file: 55.0)
-            if( nestMembers  != null) {
-                nestMembers.print();
-            }
-            // Print the inner classes
-            if (innerClasses != null && !innerClasses.isEmpty()) {
-                for (InnerClassData icd : innerClasses) {
-                    icd.print();
-                }
-                out.println();
-            }
-            // Print the BootstrapMethods
-            //
-            // Only print these if printing extended constants
-            if ((options.contains(Options.PR.CPX)) && bootstrapMethods != null && !bootstrapMethods.isEmpty()) {
-                for (BootstrapMethodData bsmdd : bootstrapMethods) {
-                    bsmdd.print();
-                }
-                out.println();
-            }
-            out.println(format("} // end Class %s%s",
-                    className,
-                    sourceName != null ? " compiled from \"" + sourceName +"\"" : ""));
-        } else {
             // Print module attributes
             moduleData.print();
-            out.print("} // end Module ");
-            out.print( moduleData.getModuleName());
-            if(moduleData.getModuleVersion() != null)
-                out.print(" @" + moduleData.getModuleVersion());
-            out.println();
-        }
+            //
+            print(format("} // end of module %s", moduleData.getModuleName()));
+            if (moduleData.getModuleVersion() != null)
+                print("@" + moduleData.getModuleVersion());
+            println();
+        } else if (className.endsWith("package-info")) {    // package-info compilation unit
+            if (printConstantPool) {
+                pool.print();
+            }
+            // Print the Annotations
+            printAnnotations(visibleAnnotations, invisibleAnnotations);
+            printAnnotations(visibleTypeAnnotations, invisibleTypeAnnotations);
+            if (hasPackage()) {
+                println(String.format("package %s version %s;", packageName, cfVersion.asString()));
+            }
+        } else {                                            // class/interface compilation unit
+            if (hasPackage()) {
+                println(format("package %s;%n", packageName));
+            }
+            // Print the Annotations
+            printAnnotations(visibleAnnotations, invisibleAnnotations);
+            printAnnotations(visibleTypeAnnotations, invisibleTypeAnnotations);
+            // In Java SE 8, the ACC_SUPER semantics became mandatory, regardless of the setting of ACC_SUPER or
+            // the class file version number, and the flag no longer had any effect.
+            // however, to not print it where it was, would cause hotswap of such class to
+            // throw java.lang.UnsupportedOperationException: class redefinition failed: attempted to change the class modifiers
 
-        List<IOException> issues = getIssues();
-        if( !issues.isEmpty() ) {
-
-            throw issues.get(0);
-        }
-    } // end ClassData.print()
-
-    // Gets the type of processed binary
-    private boolean isModuleUnit() {
-        return moduleData != null;
-    }
-
-    private void printMemberDataList( List<? extends MemberData> list) throws IOException {
-        if( list != null ) {
-            int count = list.size();
-            if( count > 0 ) {
-                for( int i=0; i < count; i++ ) {
-                    MemberData md = list.get(i);
-                    md.setIndent(Options.BODY_INDENT);
-                    if( i !=0 && md.getAnnotationsCount() > 0 )
-                        out.println();
-                    md.print();
+            String name = pool.inRange(this_cpx) ? pool.getShortClassName(this_cpx, this.packageName) : "?? invalid index";
+            Pair<String, String> signInfo = (signature != null) ?
+                    signature.getPrintInfo((i) -> pool.inRange(i)) :
+                    new Pair<>("", "");
+            // An interface is distinguished by the ACC_INTERFACE flag being set.
+            if (EModifier.isInterface(access)) {       // interface compilation unit
+                print(EModifier.asKeywords(access & ~ACC_ABSTRACT.getFlag(), CLASS));
+                print(printCPIndex ?
+                        (skipComments ?
+                                format("interface #%d%s", this_cpx, signInfo.first) :
+                                format("interface #%d%s /* %s%s */", this_cpx, signInfo.first, name, signInfo.second)
+                        ) :
+                        format("interface %s", name, signInfo.second)
+                );
+            } else {                                    // class compilation unit
+                // add synthetic, deprecated if necessary
+                print(EModifier.asKeywords(access, CLASS) + getPseudoFlagsAsString());
+                print(printCPIndex ?
+                        (skipComments ?
+                                format("class #%d%s", this_cpx, signInfo.first) :
+                                format("class #%d%s /* %s%s */", this_cpx, signInfo.first, name, signInfo.second)
+                        ) :
+                        format("class %s%s", name, signInfo.second)
+                );
+                // if base class is not j.l.Object prints the "extends" statement
+                if (this_cpx < pool.size() && this_cpx > 0) {
+                    if (!pool.getClassName(super_cpx).equals("java/lang/Object")) {
+                        print(printCPIndex ?
+                                (skipComments ?
+                                        format(" extends #%d", super_cpx) :
+                                        format(" extends #%d /* %s */", super_cpx, pool.getShortClassName(super_cpx, this.packageName))
+                                ) :
+                                format(" extends %s", pool.getShortClassName(super_cpx, this.packageName))
+                        );
+                    }
+                } else {
+                    print(printCPIndex ?
+                            (skipComments ?
+                                    format(" extends #%d", super_cpx) :
+                                    format(" extends #%d /* ?? invalid index */", super_cpx)
+                            ) : " extends ??");
                 }
-                out.println();
+            }
+            // print the "implements" statement
+            int numInterfaces = interfaces.length;
+            if (numInterfaces > 0) {
+                String statement;
+                String sNames = Arrays.stream(interfaces).
+                        mapToObj(cpx -> pool.getShortClassName(cpx, this.packageName)).
+                        collect(Collectors.joining(", "));
+                if (printCPIndex) {
+                    String sIndexes = Arrays.stream(interfaces).
+                            mapToObj(cpx -> format("#%d", cpx)).
+                            collect(Collectors.joining(", "));
+                    if( skipComments ) {
+                        statement = format("%simplements %s", (numInterfaces > 1) ? "\n" + getIndentString() : " ", sIndexes);
+                    } else {
+                        statement = format("%simplements %s /* %s */", (numInterfaces > 1) ? "\n" + getIndentString() : " ", sIndexes, sNames);
+                    }
+                } else {
+                    statement = format("%simplements %s", (numInterfaces > 1) ? "\n" + getIndentString() : " ", sNames);
+                }
+                print(statement);
+            }
+            println("%sversion %s", (numInterfaces > 1) ? "\n" + getIndentString() : " ", cfVersion.asString());
+            println("{");
+            if (printSourceLines && (sourceFileData != null)) {
+                String sourceName = sourceFileData.getSourceName();
+                if (sourceName != null) {
+                    sourceLines = new TextLines(classFile.getParent(), sourceName);
+                }
+            }
+
+            // Print the constant pool
+            if (printConstantPool) {
+                pool.print();
+                setCommentOffset(pool.getCommentOffset());
+            }
+
+            // get the list of attributes that would be printed. it might be empty.
+            final List<? extends Printable> printableAttributes = getListOfPrintableAttributes(
+                    sourceFileData,
+                    recordData,                     // Print the Record (since class file 58.65535 JEP 359)
+                    permittedSubclassesData,        // Print PermittedSubclasses Attribute (JEP 360 (Sealed types): class file 59.65535)
+                    nestHost,                       // Print the NestHost (since class file: 55.0)
+                    nestMembers,                    // Print the NestMembers (since class file: 55.0)
+                    innerClasses,
+                    preloadData,
+                    bootstrapMethods,
+                    sourceDebugExtensionData
+            );
+
+            // Print the fields
+            if (printMemberDataList(fields, getCommentOffset()) && isPrintable(methods) && !printableAttributes.isEmpty()) {
+                println();
+            }
+
+            // Print the methods
+            if (printMemberDataList(methods, getCommentOffset() - getIndentSize()) && !printableAttributes.isEmpty()) {
+                println();
+            }
+
+            // Print the attributes
+            numCorruptedAttributes = printAttributes(getCommentOffset() - getIndentSize(), printableAttributes);
+            if( skipComments ) {
+                println("}");
+            } else {
+                println(format("} // end Class %s%s",
+                        name,
+                        sourceFileData != null ? " compiled from \"" + sourceFileData.getSourceName() + "\"" : ""));
             }
         }
+
+        // TODO: This isn't necessary. The warning info is already inlined into the jasm code.
+        // TODO: Or the "-nowarn" option should be added.
+        // if( numCorruptedAttributes > 0 ) {
+        //      environment.warning("warn.corrupted_attributes", numCorruptedAttributes);
+        // }
+
+        List<IOException> issues = pool.getIssues();
+        if (!issues.isEmpty()) {
+            for (IOException ioe : issues) {
+                environment.error(ioe);
+            }
+            throw new RuntimeException();
+        }
     }
 
-    private List<IOException> getIssues() {
-        return this.pool.pool.stream().
-                filter(Objects::nonNull).
-                filter(c->c.getIssue() != null).
-                map(ConstantPool.Constant::getIssue).
-                collect(Collectors.toList());
+    private <P extends Printable> List<P> getListOfPrintableAttributes(P... attributes) {
+        return Arrays.stream(attributes).filter(a -> isPrintable(a)).toList();
     }
 
-}// end class ClassData
+    // Utility methods to check whether cottages of data would be printed
+    private <P extends Printable> boolean isPrintable(P... attributes) {
+        for (P attribute : attributes)
+            if (attribute != null) {
+                if (attribute.isPrintable()) {
+                    if (attribute instanceof Container<?>) {
+                        Container<P> container = (Container<P>) attribute;
+                        for (P item : container) {
+                            if (item.isPrintable())
+                                return true;
+                        }
+                        return false;
+                    }
+                    return true;
+                }
+            }
+        return false;
+    }
+
+    /**
+     * Returns number of corrupted attributes if any
+     */
+    private <P extends Printable> int printAttributes(int commentOffset, List<P> attributeList) throws
+            IOException {
+        int len = attributeList.size();
+        boolean printed = false;
+        for (int i = 0; i < len; i++) {
+            P attribute = attributeList.get(i);
+            if (isPrintable(attribute)) {
+                if (Container.class.isAssignableFrom(attribute.getClass())) {
+                    for (P item : (Container<P>) attribute) {
+                        if (Indenter.class.isAssignableFrom(item.getClass())) {
+                            ((Indenter) item).setCommentOffset(commentOffset);
+                        }
+                        item.print();
+                    }
+                } else {
+                    if (Indenter.class.isAssignableFrom(attribute.getClass())) {
+                        ((Indenter) attribute).setCommentOffset(commentOffset);
+                    }
+                    attribute.print();
+                }
+                printed = true;
+            }
+            if (printed && (i + 1 < len)) {
+                println();
+                printed = false;
+            }
+        }
+        // Prints corrupted attributes if any.
+        List<AttrData> corruptedList = getCorruptedAttributes();
+        if (!corruptedList.isEmpty()) {
+            printIndentLn();
+            printIndentLn(format("// == Ignored %d corrupted attribute(s): ==", corruptedList.size()));
+            for (int i = 0; i < corruptedList.size(); i++) {
+                printIndentLn("// attribute_info {");
+                printIndentLn(format("//    u2 attribute_name_index: #%d;", corruptedList.get(i).getNameCpx()));
+                printIndentLn(format("//    u4 attribute_length:     %d;", corruptedList.get(i).getLength()));
+                printIndentLn("//    u1 info[attribute_length];");
+                printIndentLn("// }");
+            }
+            printIndentLn();
+        }
+        return corruptedList.size();
+    }
+
+    private List<AttrData> getCorruptedAttributes() {
+        return attributes.stream().filter(AttrData::isCorrupted).toList();
+    }
+
+    /**
+     * Prints list of either fields or methods
+     *
+     * @param list a list of fields or methods to be printed
+     * @return true if something were printed
+     * @throws IOException if something goes wrong
+     */
+    private boolean printMemberDataList(List<? extends MemberData> list, int commentOffset) throws IOException {
+        if (list != null) {
+            int count = list.size();
+            if (count > 0) {
+                for (int i = 0; i < count; i++) {
+                    MemberData md = list.get(i);
+                    md.setCommentOffset(commentOffset);
+                    if (i != 0 && md.getAnnotationsCount() > 0)
+                        println();
+                    md.print();
+                }
+                return true;
+            }
+        }
+        return false;
+    }
+}
